# PoetryExample

./: .gitignore  .pre-commit-config.yaml  InstallDevEnv.ps1  README.md  README.rst  ReleaseNotes.md  SetupDotEnv.ps1  SetupGitHubAccess.ps1  SetupPrivateRepoAccess.ps1  install.ps1  pyproject.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bugfix.md  config.yaml  hotfix.md
.github/workflows/: 00-deployment-pipeline.yaml  01-pre-commit.yaml  02-ci.yaml  03-build-and-publish-to-pypi.yaml  03-ci.yaml  py-temp-pypi-pub_no_docker-def.yaml
src/: poetryexample.py
tests/: test_poetryexample.py  test_poetryprivate.py
